1.3.0 port to 26.1.x